XCH-1524  Update openapi.yaml
